--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: flutter_store
 description: Simple state management for Flutter
 version: 1.0.0
 author: Slava Olenin <umenokin@gmail.com>
-homepage:
+homepage: https://github.com/Umenokin/flutter_store
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
