--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_store
 description: flutter_stores is simple state management for Flutter inspired by Flutter itself. It is clean and simple state management solution without any boilerplate.
-version: 1.0.0+2
+version: 1.0.0+3
 author: Slava Olenin <umenokin@gmail.com>
 homepage: https://github.com/Umenokin/flutter_store
 
@@ -8,6 +8,7 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  meta: ">=1.1.1 <2.0.0"
   flutter:
     sdk: flutter
 
